Fix overflow of the circles

--- a/src/assets/css/extra.scss
+++ b/src/assets/css/extra.scss
@@ -9,3 +9,8 @@
   list-style: none;
   font-family: 'Poppins', sans-serif;
 }
+
+#app {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
